# framelab

./: .env.example  AGENT.md  AGENTS.md  CHANGELOG.md  LICENSE  README.md  app_state.py  config.py  config.toml  conversation.py  hero.md  llm_streaming.py  main.py  pyproject.toml  requirements.txt  run.py  system_prompt.txt
.github/workflows/: tests.yml
docs/: INTERFACE.md  REFERENCE.md  TESTING.md  TUTORIAL.md
prompts/correction/: 10_refine_with_image.meta.toml  10_refine_with_image.txt  refine_with_correction_image.meta.toml
prompts/initial/: 10_image_deepdive.meta.toml  20_video_hybridscript.meta.toml  30_script_cue_extraction.meta.toml  30_script_cue_extraction.txt  31_cue_refinement.meta.toml  31_cue_refinement.txt  detailed_technical_creative.txt  video_technical_hybrid_script.meta.toml  video_technical_hybrid_script.txt
prompts/system/: 02_general_assist.meta.toml  10_frame_breakdown.meta.toml  11_shotlist_script.meta.toml  11_shotlist_script.txt  13_video_promptplan.meta.toml  15_cinema_mentor.meta.toml  17_video_screenplay.meta.toml  20_screenplay_realization_checker.meta.toml  20_screenplay_realization_checker.txt  ai_film_director.meta.toml  ai_film_director.txt  cine_screenplay_reconstructor.txt  cine_script_architect.meta.toml  cine_video_strategist.meta.toml  cine_video_strategist.txt  cinematic_analysis.meta.toml  cinematic_image_analysis.meta.toml  (+3 more)
tests/: conftest.py  test_app_state.py  test_conversation.py  test_live_llm_smoke.py  test_llm_streaming_fallback.py  test_llm_streaming_parsers.py  test_run_helpers.py  test_ui_smoke.py
